--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "docker:prune:auth": "turbo prune auth-service --docker",
-    "docker:up:example": "docker compose --env-file .env.example up"
+    "docker:prune:auth": "turbo prune @repo/auth-service --docker",
+    "docker:up:example": "docker compose --env-file .env.example up",
+    "docker:build:auth": "docker build -f ./apps/auth-service/Dockerfile -t auth-service ."
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "prettier": "^3.6.2",
     "turbo": "^2.6.1",
     "typescript": "5.9.2"
