--- a/packages/nest-modules/microservice-logging-module/package.json
+++ b/packages/nest-modules/microservice-logging-module/package.json
@@ -2,26 +2,28 @@
   "name": "@repo/microservice-logging-module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "rimraf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json"
   },
   "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
   "dependencies": {
     "pino-http": "^10.5.0",
-    "pino-nestjs": "^0.1.3"
+    "pino-nestjs": "^0.1.3",
+    "pino-pretty": "^11.2.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^11.0.1",
@@ -29,6 +31,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "rimraf": "^6.1.0",
     "typescript": "^5.7.3"
   }
 }
