--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,28 +4,29 @@
   "description": "",
   "private": true,
   "sideEffects": false,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
-    "build": "tsc"
+    "build": "rimraf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "files": [
     "dist",
     "src"
-  ], 
+  ],
   "devDependencies": {
+    "rimraf": "^6.1.0",
     "typescript": "^5.7.2"
   }
-
 }
