--- a/apps/task-service/.env.example
+++ b/apps/task-service/.env.example
@@ -2,7 +2,7 @@ PORT=3000
 
 RABBITMQ_URL=amqp://admin:admin@localhost:5672
 RABBITMQ_QUEUE=task_queue
-
+RABBITMQ_NOTIFICATIONS_QUEUE=notification_queue
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
