--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "docker:prune:task": "turbo prune @repo/task-service --docker",
     "docker:prune:api-gateway": "turbo prune @repo/api-gateway --docker",
     "docker:prune:notification": "turbo prune @repo/notification-service --docker",
-    "docker:up:example": "docker compose --env-file .env.example up --build",
+    "docker:up:example": "docker compose --env-file .env.example up",
+    "docker:up:example:build": "docker compose --env-file .env.example up --build",
     "docker:down": "docker-compose down -v",
     "docker:build:auth": "docker build -f ./apps/auth-service/Dockerfile -t auth-service .",
     "docker:build:notification": "docker build -f ./apps/notification-service/Dockerfile -t notification-service .",
