--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",    
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -31,12 +31,15 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@repo/microservice-health-module": "*",
-    "@repo/microservice-logging-module": "*",
+    "@repo/microservice-interceptors": "*",
     "@repo/types": "*",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
     "argon2": "^0.44.0",
     "dotenv": "^16.0.3",
+    "pino-http": "^10.5.0",
+    "pino-nestjs": "^0.1.3",
+    "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
