--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     container_name: auth-service
     env_file:
       - .env.example
-    restart: on-failure
+    restart: unless-stopped
     environment:
       - PORT=${HTTP_PORT}
       - POSTGRES_DB=${POSTGRES_DB_AUTH_DB}
@@ -77,7 +77,7 @@ services:
     container_name: task-service
     env_file:
       - .env.example
-    restart: on-failure
+    restart: unless-stopped
     environment:
       - PORT=${HTTP_PORT}
       - POSTGRES_DB=${POSTGRES_DB_TASK_DB}
@@ -104,7 +104,7 @@ services:
     container_name: notification-service
     env_file:
       - .env.example
-    restart: on-failure
+    restart: unless-stopped
     environment:
       - PORT=${HTTP_PORT}
       - RABBITMQ_QUEUE=${RABBITMQ_NOTIFICATIONS_QUEUE}    
@@ -130,7 +130,7 @@ services:
     container_name: api-service
     env_file:
       - .env.example
-    restart: on-failure
+    restart: unless-stopped
     environment:
       - PORT=${HTTP_PORT}
       - WS_HOST=${WS_HOST}
