--- a/packages/nest-modules/microservice-interceptor/package.json
+++ b/packages/nest-modules/microservice-interceptor/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@repo/microservice-logging-module",
+  "name": "@repo/microservice-interceptors",
   "version": "1.0.0",
-  "description": "",
+  "description": "NestJS interceptor for logging microservice RPC requests with Pino",
   "module": "./dist/esm/index.js",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
@@ -17,7 +17,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json"
   },
-  "keywords": [],
+  "keywords": [
+    "nestjs",
+    "microservice",
+    "interceptor",
+    "logging",
+    "pino",
+    "rpc"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -28,6 +35,7 @@
   "peerDependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.0.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
